# bonzi

./: .gitignore  Cargo.toml  README.md
acs-web/: Cargo.toml  package.json
acs-web-example/: index.html  package.json  vite.config.ts
acs-web-example/public/agents/: Airplane.acs  Elfis.acs  GreyAlien.acs  Lina.acs  Matej8251.acs  MrEagle.acs  Pencilly.acs  Raysa.acs  Rula.acs  Serilly.acs  Toto.acs  awcbetachuckman.acs  hoops.acs  yoyo.acs
acs-web-example/src/: main.ts
acs-web/src/: lib.rs
acs/examples/: inspect.rs
acs/src/: acs.rs  bit_reader.rs  compression.rs  lib.rs  reader.rs
acs/tests/: bonzi.rs
notes/: NOTES.md  acs.hexpat
notes/files/: Stormyagent.acs  cami.acs
sapi4-api/: Dockerfile  README.md  docker-compose.yml  server.py
sapi4-api/static/: index.html
sapi4-rs/: Cargo.toml
sapi4-rs/src/: main.rs
sapi4-rs/src/sapi4/: guids.rs  interfaces.rs  mod.rs  synthesizer.rs  types.rs
sapi4-tts/: Dockerfile  README.md  docker-compose.yml
sapi4-tts/scripts/: entrypoint.sh
